<resources>
    <string name="app_name">firstApp</string>
    <string name="commonwealth_handler">CommonWealth Handler</string>
    <string name="name1">Aaon Raza</string>
    <string name="the_contenders">~The Contenders~</string>
    <string name="ahmer">Ahmer</string>
    <string name="saqib">Saqib</string>
    <string name="hassan">Hassan</string>
    <string name="qasim">Qasim</string>
    <string name="bilal">Bilal</string>
    <string name="aaon">Aaon</string>
</resources>