<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4061DC"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#B32F2F">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00938CB1"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/commonwealth_handler"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="MissingConstraints" />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00000000"
        android:layout_margin="30dp"

        app:cardCornerRadius="20dp">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="30sp"
            android:textColor="#F63535"
            android:fontFamily="cursive"
            android:text="@string/the_contenders" />
    </androidx.cardview.widget.CardView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"


                app:cardCornerRadius="100dp">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"

                    android:text="@string/ahmer" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:cardCornerRadius="100dp">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"

                    android:text="@string/saqib" />
            </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            app:cardCornerRadius="100dp">
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"

                android:text="@string/hassan" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            app:cardCornerRadius="100dp">
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"

                android:text="@string/qasim" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            app:cardCornerRadius="100dp">
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"

                android:text="@string/bilal" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            app:cardCornerRadius="100dp"
            >
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"

                android:text="@string/aaon" />
           </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        >


        <Button
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="25dp"


            android:text="@string/app_name"
            android:textColorHighlight="#FF0000"
            android:textColorLink="#FF0000"
            app:rippleColor="#B12323"
            android:backgroundTint="#010F59"
            app:strokeColor="#FFC107" />
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>